--- a/index.html
+++ b/index.html
@@ -300,19 +300,19 @@
                 <p>Puedes seguirnos y contactarnos a través de nuestras redes sociales:</p>
                 <ul class="contacto-redes">
                     <li>
-                        <a href="https://www.instagram.com/insu.raices/">
+                        <a href="https://www.instagram.com/insu.raices/" target="_blank">
                             <img src="images/icono-ig.png" width="100" height="100" alt="Logo de Instagram"/>
                         </a>
                         <p>Instagram</p>
                     </li>
                     <li>
-                        <a href="https://www.tiktok.com/@insu.raices">
+                        <a href="https://www.tiktok.com/@insu.raices" target="_blank">
                             <img src="images/icono-tiktok.png" width="100" height="100" alt="Logo de TikTok"/>
                         </a>
                         <p>TikTok</p>
                     </li>
                     <li>
-                        <a href="https://api.whatsapp.com/message/UVPRG74RRTZZG1?autoload=1&app_absent=0">
+                        <a href="https://api.whatsapp.com/message/UVPRG74RRTZZG1?autoload=1&app_absent=0" target="_blank">
                             <img src="images/icono-wsp.png" width="100" height="100" alt="Logo de Whatsapp"/>
                         </a>
                         <p>WhatsApp</p>
@@ -336,10 +336,10 @@
                                 2 Norte 841 (entre 1 y 2 Oriente), Talca, Región del Maule, Chile.
                             </li>
                             <li><i class="fa fa-phone"></i>
-                                +56 9 1234 5678
+                                +56 9 8264 6308
                             </li>
                             <li><i class="fa fa-envelope-o"></i>
-                                <a href="#">contactos@insuraices.com</a>
+                                <a href="https://mail.google.com/mail/?view=cm&to=carlamercado.arias@gmail.com" target="_blank">carlamercado.arias@gmail.com</a>
                             </li>
                         </ul>
                     </div>
@@ -356,6 +356,9 @@
                                 Domingo de 11:00 am - 3:00 pm
                             </li>
                         </ul>
+                    </div>
+                    <div class="col-md-4 mb30">
+                        <a class="navbar-brand" href="index.html"><img src="images/logo-insuraices-wh.png" alt="Logo de Insuraices"></a>
                     </div>
                 </div>
                 <div class="row pt40">
